--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,14 @@
 # URL de la base de datos postgresql
 DATABASE_URL="postgresql://janedoe:mypassword@localhost:5432/mydb?schema=sample"
 
-#vars develop docker db
+#develop docker db vars
 DB_USER="user"
 DB_PASSWORD="password"
 DB_NAME="db_name"
+
+#next auth secret
+NEXTAUTH_SECRET=""
+
+#google client vars
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
