--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,8 @@ DB_NAME="db_name"
 
 #next auth secret
 NEXTAUTH_SECRET=""
+#On Vercel deployments, we will read the VERCEL_URL environment variable, so you won't need to define NEXTAUTH_URL.
+NEXTAUTH_URL="https://localhost:3000"
 
 #google client vars
 GOOGLE_CLIENT_ID=""
