add question and game logic, connect with openai and use tanstack

--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,8 @@ NEXTAUTH_URL="https://localhost:3000"
 #google client vars
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+#openai api key
+OPENAI_API_KEY=""
+
+API_URL="http://localhost:3000"
