--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@tanstack/react-query": "^5.59.19",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "openai": "^4.71.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
