--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-auth": "^4.24.10",
@@ -39,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/string-similarity": "^4.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
